tests/ui/invalid_cancel_handle.stderr
error: `cancel_handle` may only be specified once per argument
 --> tests/ui/invalid_cancel_handle.rs:4:55
  |
4 | async fn cancel_handle_repeated(#[pyo3(cancel_handle, cancel_handle)] _param: String) {}
  |                                                       ^^^^^^^^^^^^^

error: `cancel_handle` may only be specified once
  --> tests/ui/invalid_cancel_handle.rs:10:28
   |
10 |     #[pyo3(cancel_handle)] _param2: String,
   |                            ^^^^^^^

error: `cancel_handle` attribute can only be used with `async fn`
  --> tests/ui/invalid_cancel_handle.rs:16:53
   |
16 | fn cancel_handle_synchronous(#[pyo3(cancel_handle)] _param: String) {}
   |                                                     ^^^^^^

error: `from_py_with` and `cancel_handle` cannot be specified together
  --> tests/ui/invalid_cancel_handle.rs:30:12
   |
30 |     #[pyo3(cancel_handle, from_py_with = cancel_handle)] _param: pyo3::coroutine::CancelHandle,
   |            ^^^^^^^^^^^^^

error[E0277]: `CancelHandle` cannot be used as a Python function argument
   --> tests/ui/invalid_cancel_handle.rs:24:50
    |
 24 | async fn missing_cancel_handle_attribute(_param: pyo3::coroutine::CancelHandle) {}
    |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `pyo3::impl_::extract_argument::PyFunctionArgument<'_, '_, '_, false>` is not implemented for `CancelHandle`
    |
    = note: implement `FromPyObject` to enable using `CancelHandle` as a function argument
    = note: `Python<'py>` is also a valid argument type to pass the Python token into `#[pyfunction]`s and `#[pymethods]`
help: the following other types implement trait `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, 'py, IMPLEMENTS_FROMPYOBJECT>`
 --> src/impl_/extract_argument.rs
  |
  | / impl<'a, 'holder, 'py, T: 'a + 'py> PyFunctionArgument<'a, 'holder, 'py, false>
  | |     for &'holder Bound<'py, T>
  | | where
  | |     T: PyTypeCheck,
  | |___________________^ `&'holder pyo3::Bound<'py, T>` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, 'py, false>`
...
  | / impl<'a, 'holder, 'py, T> PyFunctionArgument<'a, 'holder, 'py, false> for Option<T>
  | | where
  | |     T: PyFunctionArgument<'a, 'holder, 'py, false>,
  | |___________________________________________________^ `Option<T>` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, 'py, false>`
...
  |   impl<'a, 'holder, T: PyClass> PyFunctionArgument<'a, 'holder, '_, false> for &'holder T {
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&'holder T` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, '_, false>`
...
  | / impl<'a, 'holder, T: PyClass<Frozen = False>> PyFunctionArgument<'a, 'holder, '_, false>
  | |     for &'holder mut T
  | |______________________^ `&'holder mut T` implements `pyo3::impl_::extract_argument::PyFunctionArgument<'a, 'holder, '_, false>`

error[E0308]: mismatched types
  --> tests/ui/invalid_cancel_handle.rs:20:66
   |
19 | #[pyfunction]
   | -------------
   | |
   | arguments to this function are incorrect
   | in this attribute macro expansion
20 | async fn cancel_handle_wrong_type(#[pyo3(cancel_handle)] _param: String) {}
   |                                                                  ^^^^^^ expected `String`, found `CancelHandle`
   |
note: function defined here
  --> tests/ui/invalid_cancel_handle.rs:20:10
   |
20 | async fn cancel_handle_wrong_type(#[pyo3(cancel_handle)] _param: String) {}
   |          ^^^^^^^^^^^^^^^^^^^^^^^^                        --------------
   = note: this error originates in the attribute macro `pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `CancelHandle` cannot be used as a Python function argument
   --> tests/ui/invalid_cancel_handle.rs:24:50
    |
 24 | async fn missing_cancel_handle_attribute(_param: pyo3::coroutine::CancelHandle) {}
    |                                                  ^^^^ the trait `FromPyObject<'_, '_>` is not implemented for `CancelHandle`
    |
    = note: implement `FromPyObject` to enable using `CancelHandle` as a function argument
    = note: `Python<'py>` is also a valid argument type to pass the Python token into `#[pyfunction]`s and `#[pymethods]`
    = help: the following other types implement trait `FromPyObject<'a, 'py>`:
              `&'a CStr` implements `FromPyObject<'a, '_>`
              `&'a [u8]` implements `FromPyObject<'a, 'py>`
              `&'a str` implements `FromPyObject<'a, '_>`
              `(T0, T1)` implements `FromPyObject<'a, 'py>`
              `(T0, T1, T2)` implements `FromPyObject<'a, 'py>`
              `(T0, T1, T2, T3)` implements `FromPyObject<'a, 'py>`
              `(T0, T1, T2, T3, T4)` implements `FromPyObject<'a, 'py>`
              `(T0, T1, T2, T3, T4, T5)` implements `FromPyObject<'a, 'py>`
            and $N others
    = note: required for `CancelHandle` to implement `pyo3::impl_::extract_argument::PyFunctionArgument<'_, '_, '_, true>`
note: required by a bound in `pyo3::impl_::extract_argument::extract_argument`
 --> src/impl_/extract_argument.rs
  |
  | pub fn extract_argument<'a, 'holder, 'py, T, const IMPLEMENTS_FROMPYOBJECT: bool>(
  |        ---------------- required by a bound in this function
...
  |     T: PyFunctionArgument<'a, 'holder, 'py, IMPLEMENTS_FROMPYOBJECT>,
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `extract_argument`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
